--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<a href="itms-services://?action=download-manifest&amp;url=https://raw.githubusercontent.com/Jonathan0827/YourSchool/main/app.plist">Install</a>
+<a href="itms-services://?action=download-manifest&amp;url=https://github.com/Jonathan0827/YourSchool/raw/main/app.plist">Install</a>
