--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<a href="itms-services://?action=download-manifest&amp;url=https://github.com/Jonathan0827/YourSchool/raw/main/YourSchool.json">Install</a>
+<!DOCTYPE html>
+
+<html lang="en">
+	<head id="head">
+		<title>YourSchool</title>
+	</head>
+	<body>
+    <h1><a href="itms-services://?action=download-manifest&url=https://resources.usescarlet.com/Plist/ScarletAlpha.plist">Scarlet 설치</a></h1>
+	</body>
+</html>
