--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 	<head id="head">
 		<title>YourSchool</title>
+		<link rel="stylesheet" href="https://unpkg.com/mvp.css@1.12/mvp.css"> 
 	</head>
 	<body>
     <h1><a href="itms-services://?action=download-manifest&url=https://resources.usescarlet.com/Plist/ScarletAlpha.plist">Scarlet 설치</a></h1>
