--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 		<link rel="stylesheet" href="https://unpkg.com/mvp.css@1.12/mvp.css"> 
 	</head>
 	<body>
-    <h1><a href="items-services://?action=download-manifest&url=https://resources.usescarlet.com/Plist/ScarletAlpha.plist">Scarlet 설치</a></h1>
+    <h1><a href="ites-services://?action=download-manifest&url=https://resources.usescarlet.com/Plist/ScarletAlpha.plist">Scarlet 설치</a></h1>
 	</body>
 </html>
