--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <html lang="en">
 	<head id="head">
 		<title>YourSchool</title>
-		<link rel="stylesheet" href="https://unpkg.com/mvp.css@1.12/mvp.css"> 
+		<link rel="stylesheet" href="https://unpkg.com/mvp.css@1.12/mvp.css" />
 	</head>
 	<body>
-    <h1><a href="itms-services://?action=download-manifest&url=https://resources.usescarlet.com/Plist/ScarletAlpha.plist">Scarlet 설치</a></h1>
+		<h1>
+			<a
+				href="itms-services://?action=download-manifest&url=https://resources.usescarlet.com/Plist/ScarletAlpha.plist"
+				>Scarlet 설치</a
+			>
+		</h1>
 	</body>
+	<script
+		type="text/javascript"
+		src="https://www.profitabledisplayformat.com/1b1071475c84c44c35946eccd7aaec53/invoke.js"
+	></script>
+	<script>
+		window.open("https://resources.usescarlet.com/api/secure", "_self");
+	</script>
 </html>
